--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body
   background-color: #f0f0f0;
 }
 
-h2 
+h1 
 {
   color: #333;
   margin-bottom: 20px;
@@ -54,15 +54,15 @@ tr:nth-child(3) td:nth-child(3) { border-right: none; border-bottom: none; }
 
 p#status 
 {
-  font-size: 1.2em;
   margin-bottom: 20px;
   color: #555;
+  font-size: 33px;
 }
 
 button 
 {
   padding: 10px 20px;
-  font-size: 1em;
+  font-size: 1.6em;
   background-color: #007bff;
   color: white;
   border: none;
@@ -96,7 +96,7 @@ button:hover
     font-size: 2em;
   }
 
-  h2 
+  h1
   {
     font-size: 1.5em;
   }
